--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -131,4 +131,8 @@
     <string name="retry_record_title">Rekam Ulang</string>
     <string name="sign_title">Mari Tingkatkan Kepercayaan Diri Berbahasa Inggris Anda</string>
     <string name="sign_desc">Bergabunglah sekarang untuk melatih kemampuan berbicara Anda dan jadikan Bahasa Inggris sebagai keunggulan Anda!</string>
+    <string name="Ayo">batombe_1</string>
+    <string name="batombe_desc_1">Mulailah petualanganmu dengan batombe yang mencerminkan siapa dirimu.</string>
+    <string name="batombe_title_3">Apa itu Batombe?</string>
+    <string name="batombe_desc_3">Batombe adalah salah satu kekayaan sastra lisan dari Nagari Abai, Solok Selatan, Sumatera Barat. Inti dari tradisi ini adalah pertunjukan berbalas pantun antara dua kelompok atau lebih.</string>
 </resources>
